# lathe

./: .gitignore  CLAUDE.md  CMakeLists.txt  THIRD_PARTY_NOTICES.txt
gui/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
gui/src/: AboutApp.tsx  ConvertApp.tsx  DialogApp.tsx  DragChip.tsx  DragOverlayApp.tsx  WdSelect.tsx  aboutWindow.ts  dialogWindows.ts  dialogs.ts  dropTargetResolver.ts  formats.ts  internalDragHandoff.ts  main.tsx  styles.css  theme.tsx
gui/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/coredist/: .gitkeep
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: chip_bitmap_server.rs  drag_overlay.rs  explorer_folder.rs  job_object.rs  lib.rs  main.rs  native_drag_chip.rs  os_drag.rs  registry.rs  tools.rs
src/: bootstrap.cpp  bootstrap.h  convert.cpp  convert.h  decode.cpp  decode.h  download.cpp  download.h  libav.cpp  libav.h  main.cpp  paths.cpp  paths.h  process.cpp  process.h  progress.cpp  progress.h  rawdec.cpp  rawdec.h
tools/: build-ffmpeg-lgpl-mac.sh  build-release-mac.sh  build-release.ps1
