[package]
name = "lathe-gui"
version = "0.1.0"
description = "Lathe — any-to-any media converter"
authors = ["skxllflower"]
edition = "2021"

[lib]
name = "lathe_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Second launch focuses the running window instead of spawning a twin.
tauri-plugin-single-instance = "2"

# Job Objects tie every spawned lathe.exe (and its ffmpeg children, by
# job inheritance) to this process's lifetime — same orphan prevention
# WAVdesk uses (see src/job_object.rs).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
] }
