[package]
name = "lathe-gui"
version = "0.1.3"
description = "Lathe — any-to-any media converter"
authors = ["skxllflower"]
edition = "2021"

[lib]
name = "lathe_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Second launch focuses the running window instead of spawning a twin.
tauri-plugin-single-instance = "2"
# Native drag-source for dragging files OUT into Explorer / DAWs —
# wraps DoDragDrop / NSDraggingSource / XDND (see os_drag.rs).
drag = "2"
# OS-level keyboard polling for the drag chip's modifier state —
# DoDragDrop's modal pump blocks JS keydown during a drag.
device_query = "2"

# Job Objects tie every spawned lathe.exe (and its ffmpeg children, by
# job inheritance) to this process's lifetime — same orphan prevention
# WAVdesk uses (see src/job_object.rs). GDI + COM/Shell features back
# the native drag chip (layered window + Explorer-folder labels).
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_System_Variant",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
] }
